# decoratorpattern_cpp

./: readme.md
src/: CMakeLists.txt
src/pattern1/: CMakeLists.txt  brlocalfilewriter.cpp  brlocalfilewriter.h  consolewriter.cpp  consolewriter.h  debugbrlocalfilewriter.cpp  debugbrlocalfilewriter.h  debuglocalfilewriter.cpp  debuglocalfilewriter.h  localfilewriter.cpp  localfilewriter.h  main.cpp  writer.cpp  writer.h  writerimpl.h
src/pattern2/: CMakeLists.txt  brwriter.cpp  brwriter.h  debuglocalfilewriter.cpp  debugwriter.cpp  debugwriter.h  main.cpp
src/pattern3/: CMakeLists.txt  abstractdecoratorwriter.cpp  abstractdecoratorwriter.h  brwriter.cpp  brwriter.h  debugwriter.cpp  debugwriter.h  main.cpp  writer.h
